--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 <body>
   <p id="header">Bookmarks</p>
   <ul class="vcol">
-    <li onclick="location.href='https://tweetdeck.twitter.com'">
+    <li onclick="location.href='https://www.twitter.com'">
       <span class="icon" id="i0"></span>
       <div class="vcol trunc">
         <div class="tt">Twitter</div>
-        <div class="st">https://tweetdeck.twitter.com</div>
+        <div class="st">https://www.twitter.com</div>
       </div>
     </li>
     <li onclick="location.href='https://profootballtalk.nbcsports.com/category/rumor-mill/'">
@@ -94,6 +94,20 @@
       <div class="vcol trunc">
         <div class="tt">Reddit</div>
         <div class="st">https://www.reddit.com</div>
+      </div>
+    </li>
+    <li onclick="location.href='https://www.reddit.com/r/pathofexile'">
+      <span class="icon" id="i7"></span>
+      <div class="vcol trunc">
+        <div class="tt">Path of Exile</div>
+        <div class="st">https://www.reddit.com/r/pathofexile</div>
+      </div>
+    </li>
+    <li onclick="location.href='https://www.reddit.com/r/all'">
+      <span class="icon" id="i7"></span>
+      <div class="vcol trunc">
+        <div class="tt">All</div>
+        <div class="st">https://www.reddit.com/r/all</div>
       </div>
     </li>
     <li onclick="location.href='https://www.reddit.com/r/nfl'">
