--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@
         <div class="st">https://www.reddit.com/r/formula1</div>
       </div>
     </li>
+    <li onclick="location.href='https://jra101.pythonanywhere.com'">
+      <span class="icon" id="i10"></span>
+      <div class="vcol trunc">
+        <div class="tt">Scores</div>
+        <div class="st">https://jra101.pythonanywhere.com</div>
+      </div>
+    </li>
     <li onclick="location.href='https://www.nfl.com/scores'">
       <span class="icon" id="i8"></span>
       <div class="vcol trunc">
