--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
         <div class="st">https://www.twitter.com</div>
       </div>
     </li>
+    <li onclick="location.href='https://bsky.app'">
+      <span class="icon" id="i10"></span>
+      <div class="vcol trunc">
+        <div class="tt">Bluesky</div>
+        <div class="st">https://bsky.app</div>
+      </div>
+    </li>
+    <li onclick="location.href='https://mastodon.gamedev.place/'">
+      <span class="icon" id="i10"></span>
+      <div class="vcol trunc">
+        <div class="tt">Mastodon</div>
+        <div class="st">https://mastodon.gamedev.place/</div>
+      </div>
+    </li>
     <li onclick="location.href='https://profootballtalk.nbcsports.com/category/rumor-mill/'">
       <span class="icon" id="i1"></span>
       <div class="vcol trunc">
