--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="st">https://www.theverge.com</div>
       </div>
     </li>
-    <li onclick="location.href='https://www.theringer.com'">
+    <li onclick="location.href='https://www.theringer.com/archive?m=article'">
       <span class="icon" id="i6"></span>
       <div class="vcol trunc">
         <div class="tt">The Ringer</div>
