--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <span class="icon" id="i6"></span>
       <div class="vcol trunc">
         <div class="tt">The Ringer</div>
-        <div class="st">https://www.theringer.com</div>
+        <div class="st">https://www.theringer.com/archive?m=article</div>
       </div>
     </li>
     <li onclick="location.href='https://www.reddit.com'">
