--- a/index.html
+++ b/index.html
@@ -153,32 +153,32 @@
         <div class="st">https://www.nba.com/scores</div>
       </div>
     </li>
-    <li onclick="location.href='http://jcode.org/moonbored'">
+    <li onclick="location.href='https://www.jcode.org/moonbored'">
       <span class="icon" id="i10"></span>
       <div class="vcol trunc">
         <div class="tt">Moonbored</div>
-        <div class="st">http://jcode.org/moonbored</div>
+        <div class="st">https://www.jcode.org/moonbored</div>
       </div>
     </li>
-    <li onclick="location.href='http://jcode.org/moonbored/index_2016.html'">
+    <li onclick="location.href='https://www.jcode.org/moonbored/index_2016.html'">
       <span class="icon" id="i10"></span>
       <div class="vcol trunc">
         <div class="tt">Moonbored 2016</div>
-        <div class="st">http://jcode.org/moonbored/index_2016.html</div>
+        <div class="st">https://www.jcode.org/moonbored/index_2016.html</div>
       </div>
     </li>
-    <li onclick="location.href='http://jcode.org/moonbored/index_2017.html'">
+    <li onclick="location.href='https://www.jcode.org/moonbored/index_2017.html'">
       <span class="icon" id="i10"></span>
       <div class="vcol trunc">
         <div class="tt">Moonbored 2017</div>
-        <div class="st">http://jcode.org/moonbored/index_2017.html</div>
+        <div class="st">https://www.jcode.org/moonbored/index_2017.html</div>
       </div>
     </li>
-    <li onclick="location.href='http://jcode.org/moonbored/index_2019.html'">
+    <li onclick="location.href='https://www.jcode.org/moonbored/index_2019.html'">
       <span class="icon" id="i10"></span>
       <div class="vcol trunc">
         <div class="tt">Moonbored 2019</div>
-        <div class="st">http://jcode.org/moonbored/index_2019.html</div>
+        <div class="st">https://www.jcode.org/moonbored/index_2019.html</div>
       </div>
     </li>
   </ul>
