--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="favicon.png">
+  <link rel="shortcut icon" href="favicon-32x32.png">
   <link rel="canonical" href="https://jra101.github.io/bookmarks/" />
   <link rel="manifest" href="/bookmarks/manifest.webmanifest">
   <title>Bookmarks</title>
